DNN-10127: Issues fixed: * The page name and url on search should be wrapped * The icons on search results should be top right aligned on IE * Avoid empty tags * Date range filter icon alignment in IE * Treeview still clickable in IE when in search mode

--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/style.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/style.less
@@ -74,12 +74,12 @@
             position:relative;
         }
         .calendar-icon{
-            margin-top: 7px;
             width:15px;
             height:35px;
             padding:0;
             margin-left:5px;
             cursor:pointer;
+            line-height: 35px;
         }
 
         .calendar-dropdown{
@@ -153,6 +153,9 @@
             .search-item-details-right{
                 float:right;
                 height: 32px;
+                div{
+                    height: 32px;
+                }
                 ul{
                     float:right;
                     transition: opacity .25s ease-in;
